--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,13 @@
 {
    "name": "Compress Now",
    "id": "d94b0698",
+   "author": "Raja Shekar",
    "version":"1.0.0",
-   "description":"",
+   "description":"The Compress Now plugin allows you to compress the images to reduce the",
+   "repository": {
+                    "type": "git",
+                    "url": "git@github.com:irajashekarb/Compress-Now.git"
+                 },
    "icons":[
       {
          "width":96,
@@ -18,7 +23,8 @@
       {
          "type":"menu",
          "label":"Compress Now",
-         "commandId":"myPluginCommand"
+         "commandId":"myPluginCommand",
+         "shortcut":[{"win":"Ctrl+Shift+C"}]
       }
    ]
 }
