--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,9 @@
    "keywords": [
         "utility",
         "productivity",
-        "automation"
+        "automation",
+        "image compression",
+        "image optimization"
     ],
    "author":"Raja Shekar",
    "authorEmail": "irajashekarb@gmail.com",
